Removed unused import and fixed warnings